[package]
name = "rusty-chat"
version = "0.1.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
lazy_static = "1.4"
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1.25", features = ["full"] }
futures = "0.3.21"
async-stream = "0.3"
tokio-stream = { version = "0.1.11", features = ["sync"]}
warp = "0.3.2"
